New function resizecrop

--- a/config/app.yml
+++ b/config/app.yml
@@ -8,7 +8,7 @@ all:
     
     issuu_enabled:          false
     
-    root_dir:               /uploads/assets       # Browsable root directory relative to sf_web_dir
+    root_dir:               uploads       # Browsable root directory relative to sf_web_dir
     
     thumbnails_enabled:     true           # Enable thumbnail creation on upload (requires sfThumnailPlugin)
     
