Se agrego js para dragndrop y se arreglaron algunas configuraciones en el app.yml

--- a/config/app.yml
+++ b/config/app.yml
@@ -8,9 +8,9 @@ all:
     
     issuu_enabled:          false
     
-    root_dir:               uploads       # Browsable root directory relative to sf_web_dir
+    root_dir:               /uploads       # Browsable root directory relative to sf_web_dir
     
-    cache_dir:              cache
+    cache_dir:              /cache
     
     thumbnails_enabled:     true           # Enable thumbnail creation on upload (requires sfThumnailPlugin)
     
